[package]
name = "http-broker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
anyhow = "1.0.43"
thiserror = "1"
serde = "1.0.127"
humantime-serde = "1.0.1"
log = "0.4.14"
env_logger = "0.9.0"

[dependencies.tokio]
version = "0.2"
features = ["sync", "time"]
